@@ -14,6 +14,7 @@
 	<classpathentry kind="lib" path="lib/junit-4.5.jar"/>
 	<classpathentry kind="lib" path="lib/saxon9.jar"/>
 	<classpathentry kind="lib" path="lib/thetvdbapi.jar"/>
+	<classpathentry kind="lib" path="lib/themoviedbapi.jar"/>
 	<classpathentry kind="lib" path="lib/ws-commons-util-1.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/xmlrpc-client-3.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/xmlrpc-common-3.1.1.jar"/>
