@@ -1,0 +1,23 @@
+################################################################################
+##
+##	API Keys
+##
+##	This file contains a list of the various API Keys used by the project.
+##
+##	You do not need to change these values unless expressly told to do so
+##	You should ALWAYS overwrite this file when updating the jukebox as it
+##	will contain the latest keys in use by the various modules
+##
+##	Keys should be in the format
+##		KeyName=KeyValue
+##
+################################################################################
+
+# API Key for TheTVDb.com
+TheTVDb=2805AD2873519EC5
+
+# API Key for TheMovieDB.org
+TheMovieDB=5a1a77e2eba8984804586122754f969f
+
+# API Key for MovieMeter.nl
+MovieMeter=tyk0awf19uqm65mjfsqw9z9rx6t706pe
